concord_macros/tests/trybuild/fail/sema/policy/unknown_behavior_use.rs
use concord_macros::api;

api! {
    client UnknownBehaviorUseApi {
        base "https://example.com"
    }

    scope users {
        path ["users"]
        profile missing
    }
}

fn main() {}
